--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -60,7 +60,10 @@
     "# 1. Import the sqlalchemy extract function.\n",
     "from sqlalchemy import extract\n",
     "\n",
-    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n"
+    "# 2. Write a query that filters the Measurement table to retrieve the temperatures for the month of June. \n",
+    "results = []\n",
+    "results = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date >= prev_year)\n",
+    "print(results.all())"
    ]
   },
   {
